@@ -1329,6 +1329,20 @@ $c->uri_for >>.
 You can also pass in a Catalyst::Action object, in which case it is passed to
 C<< $c->uri_for >>.
 
+Note that although the path looks like a URI that dispatches to the wanted action, it is not a URI, but an internal path to that action.
+
+For example, if the action looks like:
+
+ package MyApp::Controller::Users;
+
+ sub lst : Path('the-list') {}
+
+You can use:
+
+ $c->uri_for_action('/users/lst')
+
+and it will create the URI /users/the-list.
+
 =back
 
 =cut
@@ -2943,6 +2957,8 @@ nothingmuch: Yuval Kogman <nothingmuch@woobling.org>
 numa: Dan Sully <daniel@cpan.org>
 
 obra: Jesse Vincent
+
+Octavian Rasnita
 
 omega: Andreas Marienborg
 
